--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,16 @@
+# node / build artifacts
 /node_modules
-/.env
-/.env.local
-/.env.*.local
+**/node_modules
 /.next
 /.turbo
 /dist
-.DS_Store
+
+# env
+/.env
+/.env.local
+/.env.*.local
+
+# logs, os
 *.log
+.DS_Store
 tmp/
-.env.*
-!/.env.example
